--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "framer-motion": "^12.12.2",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next-auth": "^4.24.5",
-    "@heroicons/react": "^2.1.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -27,4 +28,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
-} 
+}
